# appimage-builder

./: Dockerfile  pyproject.toml  setup.py
.github/workflows/: continuous-builds.yml
recipes/appimage-builder/: AppImageBuilder.yml
